cluster/infrastructure/falco/falco/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: falco-ui
  namespace: falco
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - "falco-ui.${domain_name}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: ak-outpost-proxy-outpost
      backendRefs:
        - name: falco-falcosidekick-ui
          port: 2802
