cluster/infrastructure/falco/falco/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: falco-ui
  namespace: falco
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`falco-ui.${domain_name}`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: falco-falcosidekick-ui
          namespace: falco
          port: 2802
      middlewares:
        - name: ak-outpost-proxy-outpost
          namespace: authentik
