cluster/infrastructure/falco/falco/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: falco-ui
  namespace: falco
spec:
  hosts:
  - falco-ui.${domain_name}
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - route:
    - destination:
        host: falco-falcosidekick-ui.falco.svc.cluster.local
        port:
          number: 2802
    match:
    - authority:
        exact: falco-ui.${domain_name}
      uri:
        prefix: /
